lazy initialization exception fixed with left join query.Thanks to god